--- a/Xamanimation.nuspec
+++ b/Xamanimation.nuspec
@@ -24,7 +24,7 @@
    </metadata>
    <files>
       <!--Core-->
-     <file src="Release/Xamanimation.dll" target="lib/netstandard2.0" />
-     <file src="Release/Xamanimation.pdb" target="lib/netstandard2.0" />
+     <file src="Xamanimation\bin\Release\netstandard2.0\Xamanimation.dll" target="lib\netstandard2.0" />
+     <file src="Xamanimation\bin\Release\netstandard2.0\Xamanimation.pdb" target="lib\netstandard2.0" />	    
    </files>
 </package>
