--- a/Xamanimation/Xamanimation.csproj
+++ b/Xamanimation/Xamanimation.csproj
@@ -2,9 +2,20 @@
 
 	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
+		<PackageId>Xamanimation</PackageId>
+		<Version>1.2.0</Version>
+		<Authors>Javier Suárez Ruiz</Authors>
+		<Description>Animations library for Xamarin Forms
+Built against: 3.1.0.697729</Description>
+		<PackageProjectUrl>https://github.com/jsuarezruiz/Xamanimation</PackageProjectUrl>
+		<PackageLicenseUrl>https://github.com/jsuarezruiz/Xamanimation/blob/master/LICENSE</PackageLicenseUrl>
+		<PackageIconUrl>https://raw.githubusercontent.com/jsuarezruiz/Xamanimation/master/Media/Logo.64x64.png</PackageIconUrl>
+		<RepositoryUrl>https://github.com/jsuarezruiz/Xamanimation</RepositoryUrl>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<PackageTags>community, xamarin, pcl, android, xamarin.forms, ios, uwp, animations, transitions</PackageTags>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Xamarin.Forms" Version="3.1.0.583944" />
+		<PackageReference Include="Xamarin.Forms" Version="3.1.0.697729" />
 	</ItemGroup>
 </Project>
