--- a/Xamanimation.Sample/Xamanimation.Sample.iOS/Xamanimation.Sample.iOS.csproj
+++ b/Xamanimation.Sample/Xamanimation.Sample.iOS/Xamanimation.Sample.iOS.csproj
@@ -147,6 +147,9 @@
     </Reference>
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\monkeys.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
