--- a/Xamanimation.Sample/Xamanimation.Sample.UWP/Xamanimation.Sample.UWP.csproj
+++ b/Xamanimation.Sample/Xamanimation.Sample.UWP/Xamanimation.Sample.UWP.csproj
@@ -104,6 +104,7 @@
     <None Include="Xamanimation.UWP_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\monkeys.jpg" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
