--- a/Xamanimation.Sample/Xamanimation.Sample/Xamanimation.Sample.csproj
+++ b/Xamanimation.Sample/Xamanimation.Sample/Xamanimation.Sample.csproj
@@ -11,4 +11,10 @@
 	<ItemGroup>
 	  <ProjectReference Include="..\..\Xamanimation\Xamanimation.csproj" />
 	</ItemGroup>
+
+	<ItemGroup>
+	  <EmbeddedResource Update="Views\AnimationsShell.xaml">
+	    <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+	  </EmbeddedResource>
+	</ItemGroup>
 </Project>
